# river-status

./: .gitmodules  CHANGELOG  Cargo.toml  README.md  build.rs  rustfmt.toml
.github/: dependabot.yaml  dependabot.yml
.github/workflows/: dependabot.yaml  release.yml
completions/bash/: river-status.bash
completions/elvish/: river-status.elv
completions/fish/: river-status.fish
completions/powershell/: _river-status.ps1
completions/zsh/: _river-status
doc/: river-status.1.scd
man/: river-status.1
src/: client.rs  flags.rs  lib.rs  main.rs  output.rs  protocols.rs  seat.rs
