[package]
name = "river-status"
version = "0.1.0"
edition = "2024"
authors = ["Rickard Hedlund <@>"]
#license = "MIT"
# description = "A tool"
# readme = "README.md"
#homepage = ""
#repository = ""
keywords = ["cli","river"]
categories = ["command-line-utilities"]
build = "build.rs"

[profile.release]
panic = "abort"
strip = true # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true # This can remove dead code and often times reduces binary size.
codegen-units = 1 # Allow for maximum size reduction optimizations, but longer compile time.

[dependencies]
# wayland-commons = "0.29.5"
wayland-client = "0.31.8"
wayland-protocols = "0.32.6"
wayland-scanner = "0.31.6"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
