[package]
name = "river-status"
version = "0.1.1"
edition = "2024"
authors = ["Rickard Hedlund <@>"]
license = "GPT-3.0"
description = "A client for retrieving status information from [river](https://github.com/ifreund/river)"
readme = "README.md"
homepage = "https://github.com/grvn/river-status/wiki"
repository = "https://github.com/grvn/river-status"
keywords = ["cli","river"]
categories = ["command-line-utilities"]
build = "build.rs"

[profile.release]
codegen-units = 1 # Allow for maximum size reduction optimizations, but longer compile time.
lto = true # This can remove dead code and often times reduces binary size.
opt-level = "z"  # Optimize for size.
panic = "abort"
strip = true # Automatically strip symbols from the binary.

[build-dependencies]
clap = { version = "4.5.31", default-features = false, features = ["help", "cargo"]}
clap_complete = "4.5.46"
clap_mangen = "0.2.26"

[dependencies]
once_cell = "1.20.3"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
wayland-client = "0.31.8"
wayland-protocols = "0.32.6"
wayland-scanner = "0.31.6"

[lints]
workspace = true

[workspace.lints.rust]
unsafe_code = "forbid"
unused_extern_crates = "warn"
unused_must_use = "deny"
unsafe_op_in_unsafe_fn = "forbid"

[workspace.lints.clippy]
expect_used = "deny"
panic = "deny"
unwrap_used = "deny"
await_holding_lock = "deny"
needless_pass_by_value = "deny"
todo = "deny"
trivially_copy_pass_by_ref = "deny"
unimplemented = "deny"
unreachable = "deny"